Implement Keycloak web identity session
